tests/fixtures/invalid/str_in_float.py
# Cannot use 'in' with Str and Float
x: bool = "hello" in 1.0
